--- a/style.css
+++ b/style.css
@@ -9,15 +9,16 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
   font-size: 1.1rem;
   line-height: 1.2;
   font-family: 'FTAktual', sans-serif;
-  background-color: white;
 }
 
 /* Container principale */
 .container {
   display: flex;
+  flex-direction: row;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
@@ -34,10 +35,10 @@ html, body {
 .left img {
   height: 80vh;
   width: auto;
-  object-fit: contain;
   display: block;
   margin: 0;
   padding: 0;
+  object-fit: contain;
 }
 
 /* Sezione destra: testo */
@@ -67,4 +68,8 @@ html, body {
   bottom: 20vh; /* 100% - 80% dell'immagine */
   right: 1rem;
   text-align: right;
+}
+
+* {
+  box-sizing: border-box;
 }
