--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
 }
 
 html, body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-weight: normal;
+}
+
+html, body {
   margin: 0;
   padding: 0;
   height: 100%;
