--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  font-weight: normal;
+  font-weight: 300;
 }
 
 html, body {
