--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  font-weight: 300;
+  font-weight: 100;
 }
 
 html, body {
@@ -17,8 +17,8 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
-  font-size: 1rem;
-  line-height: 0.65;
+  font-size: 1.1rem;
+  line-height: 1.2rem;
   font-family: 'FTAktual', sans-serif;
 }
 
