--- a/style.css
+++ b/style.css
@@ -6,20 +6,19 @@
 }
 
 html, body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
-  font-weight: 100;
-}
-
-html, body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-  font-size: 1.1rem;
+
+  font-size: clamp(0.9rem, 1.4vw, 1.1rem);
   line-height: 1.2rem;
   font-family: 'FTAktual', sans-serif;
+  font-weight: 100;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 /* Container principale */
