--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ html, body {
   width: 100%;
 
   font-size: clamp(0.9rem, 1.4vw, 1.1rem);
-  line-height: 1.2rem;
+  line-height: 1.2;
   font-family: 'FTAktual', sans-serif;
-  font-weight: 100;
+  font-weight: normal;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
