--- a/style.css
+++ b/style.css
@@ -94,3 +94,59 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+/*mobileeeeeeeeeeeeeeeeeeeeeeeee */
+
+
+@media (max-width: 768px) and (max-aspect-ratio: 5/6) {
+  .container {
+  flex-direction: column;
+  min-height: 100vh; /* garantisce che l'intero viewport venga riempito */
+}
+
+  .left {
+    width: 100%;
+    flex: none;
+  }
+
+  .left img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    display: block;
+  }
+
+ .right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;              /* forza l'altezza */
+  box-sizing: border-box;
+}
+
+  .top-text {
+  position: relative;       /* Necessario per rendere attivo il left */
+  text-align: left;
+  left: 50vw;               /* Sposta il blocco a metà schermo */
+  transform: none;          /* Non serve il translate perché non vuoi centrare */
+  margin-top: 1rem;
+}
+
+  .top-text .line {
+    margin: 0;
+  }
+
+  .bottom-text {
+  position: relative;
+  text-align: left;
+  left: 50vw;
+  transform: none;
+  margin-bottom: 1rem;
+}
+
+  .bottom-text p {
+    margin: 0;
+    padding: 0;
+  }
+}
