--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ a:hover {
   }
 
   .left img {
-    width: 100%;
+    width: 100vw;
     height: auto;
     object-fit: contain;
     display: block;
