--- a/style.css
+++ b/style.css
@@ -132,16 +132,20 @@ a:hover {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    min-height: 100dvh;
+    height: 100%;
     box-sizing: border-box;
-    padding: 0 1rem;
+    padding-bottom: env(safe-area-inset-bottom, 1rem);
+    padding-top: 1rem;
   }
 
   .top-text {
+    left: 50vw;
+    width: 50vw;
     text-align: left;
-    margin-top: 1rem;
-    width: 100%;
+    padding-right: 1rem;
+    box-sizing: border-box;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
   }
 
   .top-text .line {
@@ -149,10 +153,14 @@ a:hover {
   }
 
   .bottom-text {
+    left: 50vw;
+    width: 50vw;
     text-align: left;
-    margin-top: auto;
-    margin-bottom: calc(1rem + env(safe-area-inset-bottom));
-    width: 100%;
+    padding-right: 1rem;
+    box-sizing: border-box;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    margin-top: auto; /* Spinge verso il fondo */
   }
 
   .bottom-text p {
