--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ a:hover {
     position: relative;
     left: 50%;
     width: 50%;
-    padding: 0 0rem 0rem 0rem; /* Padding bottom per separare dai testi sotto */
+    padding: 0 0rem 0rem 1rem; /* MODIFICATO: aggiunto padding left 1rem per allineamento */
     text-align: left;
     box-sizing: border-box;
     overflow-wrap: break-word;
