--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ a:hover {
     position: relative;
     left: 50%;
     width: 50%;
-    padding: 0 0 calc(env(safe-area-inset-bottom)) 0; /* Solo padding bottom per safe-area */
+    padding: 0 0 max(calc(env(safe-area-inset-bottom) + 1rem), 2rem) 0; /* Aumentato padding bottom */
     text-align: left;
     box-sizing: border-box;
     overflow-wrap: break-word;
