--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a:hover {
   }
   .container {
     flex-direction: column;
-    min-height: 100dvh;
+    height: 100dvh; /* Usa height invece di min-height */
   }
   .left {
     width: 100%;
@@ -142,7 +142,7 @@ a:hover {
     position: absolute;
     left: 50%;
     width: 50%;
-    bottom: 1rem; /* Sempre a 1rem dal fondo del viewport dinamico */
+    top: calc(100dvh - 2rem); /* Posiziona a 2rem dal fondo del viewport dinamico */
     padding: 0;
     text-align: left;
     box-sizing: border-box;
